...
    <string name="lang_reset_database_menu">Reset database</string>
    <string name="lang_reset_database_title">Database Reset</string>
    <string name="lang_reset_database_message">Are you sure you want to reset the database to its default state?</string>

    <!-- LearnOrReviewActivity -->
    <string name="lor_credits">Content credits</string>
    <string name="lor_learn">Learn</string>
    <string name="lor_review">Review</string>
    <string name="lor_count_default">Error: Count unavailable</string>
    <plurals name="lor_lessons_unlocked">
        <item quantity="one">%d lesson unlocked</item>
        <item quantity="other">%d lessons unlocked</item>
    </plurals>
...
    </plurals>

    <!-- LessonListActivity -->
    <string name="less_list_prompt">Select a Lesson</string>

    <!-- LessonActivity -->
    <string name="less_complete">Complete Lesson</string>

    <!-- Lesson Modules -->
    <string name="lmod_quiz_reveal">Reveal Answer</string>
    <string name="lmod_quiz_next">Next Question</string>
    <string name="lmod_quiz_finished">Quiz complete!</string>

...
