...
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/lmod_quiz_button_reveal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/lmod_quiz_reveal"
            android:textSize="28sp"
...
                android:layout_height="wrap_content"
                android:text="Answer"
                android:textIsSelectable="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/lmod_quiz_button_next"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:text="@string/lmod_quiz_next" />
        </LinearLayout>
...
